[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/interface/theme/debug.tres" type="Theme" id=1]
[ext_resource path="res://source/scripts/interface/ScreenLobby.gd" type="Script" id=2]
[ext_resource path="res://assets/texture/interface/debug.png" type="Texture" id=3]

[node name="Lobby" type="Control" groups=["Lobby"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -234.5
margin_right = 250.0
margin_bottom = 234.5
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 32

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 37.0
text = "Lobby"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 500.0
margin_bottom = 244.0
size_flags_vertical = 0
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 180.0
margin_bottom = 37.0
text = "Username:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 212.0
margin_right = 500.0
margin_bottom = 37.0

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 69.0
margin_right = 180.0
margin_bottom = 106.0
text = "IP"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 212.0
margin_top = 69.0
margin_right = 500.0
margin_bottom = 106.0

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 138.0
margin_right = 180.0
margin_bottom = 175.0
text = "Port"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 212.0
margin_top = 138.0
margin_right = 500.0
margin_bottom = 175.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 276.0
margin_right = 500.0
margin_bottom = 319.0
text = "Join Server"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 351.0
margin_right = 500.0
margin_bottom = 394.0
text = "Create Server"

[node name="Waiting" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="Waiting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.5
margin_top = -315.5
margin_right = 299.5
margin_bottom = 315.5
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Waiting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0

[node name="Label2" type="Label" parent="Waiting/VBoxContainer"]
margin_right = 200.0
margin_bottom = 37.0
text = "Waiting..."
align = 1

[node name="ItemList" type="ItemList" parent="Waiting/VBoxContainer"]
margin_top = 41.0
margin_right = 200.0
margin_bottom = 41.0
custom_constants/vseparation = 16
auto_height = true
same_column_width = true
fixed_column_width = 200
icon_mode = 0

[node name="Button" type="Button" parent="Waiting/VBoxContainer"]
margin_top = 45.0
margin_right = 200.0
margin_bottom = 88.0
text = "Ready"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_connection_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_create_Button_pressed"]
[connection signal="pressed" from="Waiting/VBoxContainer/Button" to="." method="_on_ready_Button_pressed"]
